--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="../js/jquery-3.7.1.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <style>
         body img{
             margin-left: 10%;
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <img src="../img/20.jpg" alt="">
+    <img src="img/20.jpg" alt="">
     <nav  class="navbar1">
         <a href="#" class="nav-item nav-link">Trang chủ</a>
         <a href="#" class="nav-item nav-link" id="btnDK">Đăng kí</a>
